change variables, login and register pages

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -1,24 +1,16 @@
 //Глобальные переменные
 
-$color1: #ffffff;
-$color2: #f4f5f7;
-$color3: #010101;
-$color4: #4a4a4a;
-$color5: #1c1c1c;
-$color6: #2f7505;
-$color7: #cf680a;
+$backgroundColor: #c6c4c440;
+$blockBackground: #ffffff;
+$captionColor: #f4f5f7;
+$headingColor: #010101;
+$paragraphColor: #4a4a4a;
 
-$color8: #43c5e6;
-$color9: #31c5b7;
-$color10: #fc7557;
-$color11: #7f9dff;
-$color12: #e8ecf8;
+$accentColor1: #f47123;
+$accentColor2: #ff3f3f;
 
-$color13: #f2f2f2;
-$color14: #828282;
-
-$input-focus-shadow: 0 0 0 1px #2684ff;
-$input-hover-color: #4680e5ae;
+$smallBorder: 5px;
+$bigBorder: 20px;
 
 $black: #000;
 $transparent: transparent;
