--- a/src/entities/User/ui/ProfileCard.module.scss
+++ b/src/entities/User/ui/ProfileCard.module.scss
@@ -8,7 +8,7 @@
   justify-content: space-between;
   box-shadow: $blocksShadow;
   border: $blocksBorder;
-  background-color: $color1;
+  background-color: $blockBackground;
   padding: 2rem;
   border-radius: 15px;
   .Header {
