--- a/src/features/TestsOperations/ui/CreatingTestBlock/ui/CreatingTestBlock.module.scss
+++ b/src/features/TestsOperations/ui/CreatingTestBlock/ui/CreatingTestBlock.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   gap: 1rem;
   padding: 1rem;
-  background-color: $color1;
+  background-color: $blockBackground;
   box-shadow: $blocksShadow;
   border-radius: 10px;
   border: $blocksBorder;
