--- a/src/pages/MyTestsPage/ui/MyTestsPage.module.scss
+++ b/src/pages/MyTestsPage/ui/MyTestsPage.module.scss
@@ -8,9 +8,9 @@
     justify-content: space-between;
     margin-bottom: 40px;
     .RightBlock {
-      color: $color5;
+      color: $headingColor;
       position: relative;
-      background-color: $color1;
+      background-color: $blockBackground;
       display: grid;
       grid-auto-flow: column;
       grid-auto-columns: 1fr 1px 1fr;
@@ -29,7 +29,7 @@
       .line {
         width: 1px;
         height: 1.5rem;
-        background-color: $color5;
+        background-color: $headingColor;
         opacity: 0.25;
       }
       .noActive {
@@ -46,7 +46,7 @@
         content: "";
         transition: 0.3s;
         width: calc(50% - 2rem);
-        background-color: $color11;
+        background-color: $blockBackground1;
         height: 2px;
         border-radius: 10px;
         bottom: -0.5px;
