--- a/src/pages/ProfilePage/ui/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ui/ProfilePage.module.scss
@@ -7,7 +7,7 @@
   gap: 25px;
   margin-right: 10%;
   .BackBlock {
-    background-color: $color1;
+    background-color: $blockBackground;
     padding: 1rem;
     border: $blocksBorder;
     border-radius: 15px;
