--- a/src/shared/ui/Modal/ui/Modal.module.scss
+++ b/src/shared/ui/Modal/ui/Modal.module.scss
@@ -15,9 +15,9 @@
   min-width: 350px;
   padding: 20px 20px 28px 20px;
   border-radius: 15px;
-  background-color: $color1;
+  background-color: $blockBackground;
   box-shadow: $blocksShadow;
-  border: 1px solid $color2;
+  border: 1px solid $captionColor;
 }
 .overlay {
   display: flex;
