--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,22 +7,22 @@
 
 h1 {
   font-size: 3rem;
-  color: $color5;
+  color: $headingColor;
 }
 
 h2 {
   font-size: 2rem;
-  color: $color5;
+  color: $headingColor;
 }
 
 h3 {
   font-size: 1.3rem;
-  color: $color5;
+  color: $headingColor;
 }
 
 h4 {
   font-size: 1.1rem;
-  color: $color5;
+  color: $headingColor;
 }
 
 .container {
@@ -39,8 +39,5 @@ h4 {
 body {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(rgb($color5, 0.1), transparent 1px),
-    linear-gradient(90deg, rgb($color5, 0.1), transparent 1px);
-  background-size: 5vh 5vh;
-  background-position: center center;
+  background: $backgroundColor;
 }
