--- a/src/features/AuthByEmail/ui/LoginForm/LoginForm.module.scss
+++ b/src/features/AuthByEmail/ui/LoginForm/LoginForm.module.scss
@@ -1,23 +1,19 @@
 @import "@styles/global.scss";
 .LoginForm {
-  border-radius: 20px;
-  background-color: $color1;
+  border-radius: $bigBorder;
+  background-color: $blockBackground;
   width: 30%;
-  min-width: 550px;
+  min-width: 450px;
 
   padding: 3.5rem;
   display: inline-flex;
   align-items: center;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 2.5rem;
 
-  box-shadow: $blocksShadow;
-  border: $blocksBorder;
   .title {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    gap: 10px;
+    width: 100%;
+    text-align: left;
   }
   .InputBlock {
     display: flex;
@@ -31,31 +27,14 @@
     }
   }
   .errorMsg {
-    color: $color10;
+    color: $accentColor2;
+  }
+  .AccentColor {
+    color: $accentColor1;
   }
 
   button {
     margin-top: 10px;
     width: 100%;
-  }
-  .or {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-    color: $color4;
-    white-space: nowrap;
-    hr {
-      width: 32%;
-    }
-  }
-  .Icons {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-  }
-  .AccentColor {
-    color: $color8;
   }
 }
