--- a/src/features/TestsOperations/ui/TestCard/ui/TestCard.module.scss
+++ b/src/features/TestsOperations/ui/TestCard/ui/TestCard.module.scss
@@ -8,7 +8,7 @@
   justify-content: space-between;
   gap: 5px;
   padding: 1.5rem;
-  background-color: $color1;
+  background-color: $blockBackground;
 
   border-radius: 10px;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
@@ -30,13 +30,13 @@
       overflow: hidden;
       position: relative;
       padding: 10px;
-      border-radius: 6px;
-      border: 1px solid $color3;
+      border-radius: $smallBorder;
+      border: 1px solid $headingColor;
       cursor: pointer;
       // transition: 0.5s;
 
       &:hover:not(:focus) {
-        background-color: $color12;
+        background-color: $blockBackground2;
       }
 
       &:after {
@@ -46,7 +46,7 @@
         left: 50%;
         width: 5px;
         height: 5px;
-        background: $color11;
+        background: $blockBackground1;
         opacity: 0;
         border-radius: 100%;
         transform: scale(1, 1) translate(-50%);
