--- a/src/widgets/CreateQuestionBlock/ui/CreateQuestionBlock.module.scss
+++ b/src/widgets/CreateQuestionBlock/ui/CreateQuestionBlock.module.scss
@@ -2,10 +2,10 @@
 .questionBlock {
   width: 100%;
   padding: 20px;
-  background-color: $color1;
+  background-color: $blockBackground;
   box-shadow: $blocksShadow;
-  border: 1px solid $color2;
-  border-radius: 6px;
+  border: 1px solid $captionColor;
+  border-radius: $smallBorder;
 
   display: flex;
   flex-direction: column;
