--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: $color1;
+  background-color: $blockBackground;
   padding: 0.5rem;
   box-shadow: $blocksShadow;
   border: 1px solid rgba(0, 0, 0, 0.1);
