--- a/src/widgets/LeftPanel/ui/LeftPanel.module.scss
+++ b/src/widgets/LeftPanel/ui/LeftPanel.module.scss
@@ -18,7 +18,7 @@
     gap: 0.5rem;
 
     border-radius: 10px;
-    background-color: $color1;
+    background-color: $blockBackground;
     border: $blocksBorder;
     box-shadow: $blocksShadow;
     .infoIcon {
@@ -44,7 +44,7 @@
     gap: 1rem;
 
     border-radius: 10px;
-    background-color: $color1;
+    background-color: $blockBackground;
     border: $blocksBorder;
     box-shadow: $blocksShadow;
 
@@ -56,7 +56,7 @@
       display: flex;
       flex-direction: column;
       gap: 0.8rem;
-      background-color: $color2;
+      background-color: $captionColor;
       border-radius: 10px;
 
       &::-webkit-scrollbar {
@@ -65,19 +65,19 @@
       }
       &::-webkit-scrollbar-thumb {
         border-radius: 100px;
-        background: $color14;
+        background: $blockBackground4;
       }
       .question {
         padding: 0.7rem;
         border-radius: 10px;
-        background-color: $color1;
+        background-color: $blockBackground;
         display: flex;
         gap: 0.5rem;
         flex-direction: column;
       }
       .current {
-        border: solid 1px $color11;
-        background-color: rgb($color11, 0.1);
+        border: solid 1px $blockBackground1;
+        background-color: rgb($blockBackground1, 0.1);
       }
     }
   }
