--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -5,7 +5,7 @@ $blockBackground: #ffffff;
 $captionColor: #f4f5f7;
 $headingColor: #010101;
 $paragraphColor: #4a4a4a;
-
+$currentColor: #fde2d3;
 $accentColor1: #f47123;
 $accentColor2: #ff3f3f;
 
