--- a/src/pages/MyTestsPage/ui/MyTestsPage.module.scss
+++ b/src/pages/MyTestsPage/ui/MyTestsPage.module.scss
@@ -46,7 +46,7 @@
         content: "";
         transition: 0.3s;
         width: calc(50% - 2rem);
-        background-color: $blockBackground1;
+        background-color: $blockBackground;
         height: 2px;
         border-radius: 10px;
         bottom: -0.5px;
