--- a/src/widgets/TrainCard/ui/TrainCard.module.scss
+++ b/src/widgets/TrainCard/ui/TrainCard.module.scss
@@ -30,4 +30,10 @@
     width: 100%;
     border-radius: 0 0 $bigBorder $bigBorder;
   }
+  .shareButton {
+    background: transparent;
+    border: none;
+    padding: 0;
+    width: auto;
+  }
 }
