--- a/src/shared/ui/Loader/ui/Loader.module.scss
+++ b/src/shared/ui/Loader/ui/Loader.module.scss
@@ -1,3 +1,10 @@
+.LoaderComponent {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justifycontent: center;
+  alignitems: center;
+}
 .wrapper {
   position: absolute;
   width: 100vw;
