--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -1,18 +1,30 @@
 @import "@styles/global.scss";
 .Header {
+  height: 4rem;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: $blockBackground;
-  padding: 0.5rem;
-  box-shadow: $blocksShadow;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  .RightBlock {
-    gap: 1rem;
+  padding: 1rem;
+  a {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    font-size: 1.2rem;
+  }
+  .links {
+    width: 50%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+  .activeLink {
+    color: $accentColor1;
+    background-color: $currentColor;
+    border-radius: $smallBorder;
+    padding: 0.5rem;
+
+    color: $accentColor1;
   }
 }
