--- a/src/widgets/TrainCard/ui/TrainCard.module.scss
+++ b/src/widgets/TrainCard/ui/TrainCard.module.scss
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    border-radius: 0 0 $bigBorder $bigBorder;
     .timeLine {
       display: flex;
       align-items: center;
@@ -28,7 +29,7 @@
   }
   button {
     width: 100%;
-    border-radius: 0 0 $bigBorder $bigBorder;
+    margin-top: 10px;
   }
   .shareButton {
     background: transparent;
