--- a/src/widgets/TrainCard/ui/TrainCard.module.scss
+++ b/src/widgets/TrainCard/ui/TrainCard.module.scss
@@ -22,6 +22,14 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      .path {
+        h4 {
+          font-size: 1.5rem;
+        }
+        span {
+          font-size: 0.7rem;
+        }
+      }
     }
   }
   .accent {
