--- a/src/features/AuthByEmail/ui/LoginForm/LoginForm.module.scss
+++ b/src/features/AuthByEmail/ui/LoginForm/LoginForm.module.scss
@@ -1,4 +1,4 @@
-@import "@styles/global.scss";
+@import "@styles/index.scss";
 .LoginForm {
   border-radius: $bigBorder;
   background-color: $blockBackground;
