--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -2,7 +2,7 @@
 
 $backgroundColor: #c6c4c440;
 $blockBackground: #ffffff;
-$captionColor: #f4f5f7;
+$captionColor: #7e8c9a;
 $headingColor: #010101;
 $paragraphColor: #4a4a4a;
 $currentColor: #fde2d3;
