--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -14,6 +14,7 @@ h1 {
 h2 {
   font-size: 2rem;
   color: $headingColor;
+  font-weight: 500;
 }
 
 h3 {
@@ -45,4 +46,17 @@ body {
   width: 100%;
   height: 100vh;
   background: $backgroundColor;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  width: 100%;
+  padding: 1rem;
+  @include mobile {
+    margin-bottom: 4rem;
+    padding: 0.5rem;
+  }
 }
