--- a/src/widgets/TrainCard/ui/TrainCard.module.scss
+++ b/src/widgets/TrainCard/ui/TrainCard.module.scss
@@ -1,8 +1,13 @@
 @import "@styles/index.scss";
 .TrainCard {
-  width: 40%;
-  min-width: 450px;
+  width: 50%;
+  min-width: 600px;
   text-align: left;
+  @include mobile {
+    width: 95%;
+    min-width: 200px;
+  }
+
   .header {
     border-radius: $bigBorder $bigBorder 0 0;
     background-color: $currentColor;
@@ -22,6 +27,13 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      @include mobile {
+        svg,
+        p,
+        span {
+          display: none;
+        }
+      }
       .path {
         h4 {
           font-size: 1.5rem;
