--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -30,3 +30,14 @@
 .text {
   background-color: transparent;
 }
+
+.danger {
+  background-color: transparent;
+  border: 1px solid $accentColor2;
+  &:hover {
+    box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2);
+  }
+  &:active {
+    box-shadow: none;
+  }
+}
