added from to forms

--- a/src/shared/ui/Dropdown/ui/Dropdown.module.scss
+++ b/src/shared/ui/Dropdown/ui/Dropdown.module.scss
@@ -43,3 +43,11 @@
 .EmptyDropdownDescription {
   font-weight: 300;
 }
+
+.input {
+  width: 400px;
+  background-color: transparent;
+  & input::placeholder {
+    color: #b5bcc2;
+  }
+}
