--- a/src/features/TrainParams/ui/TrainParams.module.scss
+++ b/src/features/TrainParams/ui/TrainParams.module.scss
@@ -6,3 +6,30 @@
   border-radius: 20px;
   background-color: #fff;
 }
+
+.label {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 15px;
+}
+
+.mainForm {
+  display: flex;
+  align-items: end;
+  gap: 10px;
+}
+
+.reverseButton {
+  background: transparent;
+  border: 1px solid #cfd6dd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px;
+  height: 48px;
+  svg {
+    width: 28px;
+    height: 28px;
+  }
+}
