--- a/src/features/TrainParams/ui/TrainParams.module.scss
+++ b/src/features/TrainParams/ui/TrainParams.module.scss
@@ -5,6 +5,7 @@
   padding: 30px;
   border-radius: 20px;
   background-color: #fff;
+  align-items: center;
 }
 
 .label {
@@ -12,12 +13,15 @@
   flex-direction: column;
   align-items: start;
   gap: 15px;
+  flex: 1;
 }
 
 .mainForm {
   display: flex;
   align-items: end;
   gap: 10px;
+  margin-bottom: 40px;
+  width: 100%;
 }
 
 .reverseButton {
@@ -32,4 +36,9 @@
     width: 28px;
     height: 28px;
   }
+}
+
+.SubmitButton {
+  border-radius: 0px;
+  padding: 15px 100px;
 }
