--- a/src/shared/ui/TextDropdown/ui/TextDropdown.module.scss
+++ b/src/shared/ui/TextDropdown/ui/TextDropdown.module.scss
@@ -1,4 +1,4 @@
-.Dropdown {
+.TextDropdown {
   position: absolute;
   padding: 0 25px;
   top: calc(100% + 6px);
@@ -16,7 +16,7 @@
   z-index: 1000;
 }
 
-.DropdownItem {
+.TextDropdownItem {
   cursor: pointer;
   padding: 20px 0;
   font-size: 18px;
@@ -28,7 +28,7 @@
   }
 }
 
-.EmptyDropdown {
+.EmptyTextDropdown {
   height: 250px;
   justify-content: center;
   display: flex;
@@ -40,32 +40,14 @@
   margin-top: 15px;
 }
 
-.EmptyDropdownDescription {
+.EmptyTextDropdownDescription {
   font-weight: 300;
 }
 
 .input {
+  width: 100%;
   background-color: transparent;
   & input::placeholder {
     color: #b5bcc2;
-  }
-}
-
-.DropdownClickZone {
-  position: relative;
-}
-
-.DropdownArrow {
-  position: absolute;
-  right: 20px;
-  top: 50%;
-  transform: translateY(calc(-50% + 3px));
-  transition: transform 0.16s ease-in-out;
-  svg {
-    width: 24px;
-    height: 24px;
-  }
-  &Open {
-    transform: translateY(calc(-50% + -3px)) rotate(180deg);
   }
 }
