--- a/src/shared/ui/Loader/ui/Loader.module.scss
+++ b/src/shared/ui/Loader/ui/Loader.module.scss
@@ -2,8 +2,8 @@
   height: 100vh;
   width: 100vw;
   display: flex;
-  justifycontent: center;
-  alignitems: center;
+  justify-content: center;
+  align-items: center;
 }
 .wrapper {
   position: absolute;
@@ -18,6 +18,7 @@
   width: 4em;
   height: 5em;
   font-size: 6px;
+  transform: translate(-50px, -50px);
 }
 
 .train {
