--- a/src/features/TrainParams/ui/TrainParams.module.scss
+++ b/src/features/TrainParams/ui/TrainParams.module.scss
@@ -42,3 +42,46 @@
   border-radius: 0px;
   padding: 15px 100px;
 }
+
+.titleAdvanced {
+  margin-bottom: 20px;
+  transition: 0.6s ease;
+  margin-right: auto;
+  cursor: pointer;
+  & svg {
+    transform: rotate(135deg);
+    transition: transform 0.6s ease;
+    margin-left: 6px;
+    width: 16px;
+    height: 16px;
+  }
+  &Active svg {
+    transform: rotate(0);
+  }
+}
+
+.advanced {
+  // overflow: hidden;
+  width: 100%;
+  &Content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+    gap: 10px;
+    transition: margin 0.6s ease;
+    margin-top: -100%;
+    &Active {
+      margin-top: 0;
+    }
+  }
+  &Active {
+    overflow: visible;
+  }
+}
+
+.times {
+  display: flex;
+  gap: 100px;
+  margin: 35px 0;
+}
