--- a/src/pages/CartPage/ui/CartPage.module.scss
+++ b/src/pages/CartPage/ui/CartPage.module.scss
@@ -1,7 +1,8 @@
 .CartPage {
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 4rem;
+  gap: 3rem;
 }
