--- a/src/entities/User/ui/ProfileCard.module.scss
+++ b/src/entities/User/ui/ProfileCard.module.scss
@@ -1,54 +1,10 @@
 @import "@styles/index.scss";
 .ProfileCard {
-  height: 80vh;
-  min-width: 400px;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
   justify-content: space-between;
-  box-shadow: $blocksShadow;
-  border: $blocksBorder;
+  border-radius: $smallBorder;
+  padding: 1rem;
   background-color: $blockBackground;
-  padding: 2rem;
-  border-radius: 15px;
-  .Header {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .AvatarBlock {
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    gap: 20px;
-    width: 100%;
-    min-width: 300px;
-    img {
-      width: 100px;
-      height: 100px;
-    }
-  }
-  .NameBlock {
-    display: inline-flex;
-    align-items: center;
-    gap: 20px;
-  }
-  .InputsBlock {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    gap: 20px;
-    width: 70%;
-  }
-  .Buttons {
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    width: 50%;
-  }
-}
-
-.trashIcon {
-  cursor: pointer;
 }
