--- a/src/features/TrainParams/ui/TrainParams.module.scss
+++ b/src/features/TrainParams/ui/TrainParams.module.scss
@@ -1,10 +1,10 @@
+@import "@styles/index.scss";
 .wrapper {
   display: flex;
-  flex-direction: column;
   width: 100%;
-  padding: 30px;
-  border-radius: 20px;
-  background-color: #fff;
+  padding: 1rem;
+  border-radius: $bigBorder;
+  background-color: $blockBackground;
   align-items: center;
 }
 
@@ -20,7 +20,6 @@
   display: flex;
   align-items: end;
   gap: 10px;
-  margin-bottom: 40px;
   width: 100%;
 }
 
@@ -39,8 +38,8 @@
 }
 
 .SubmitButton {
-  border-radius: 0px;
-  padding: 15px 100px;
+  border-radius: $smallBorder;
+  padding: 15px 10px;
 }
 
 .titleAdvanced {
