--- a/src/pages/MainPage/ui/MainPage.module.scss
+++ b/src/pages/MainPage/ui/MainPage.module.scss
@@ -2,3 +2,9 @@
 .MainPage {
   padding: 0 2rem;
 }
+.flexBody {
+  padding: 1rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
