--- a/src/pages/ProfilePage/ui/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ui/ProfilePage.module.scss
@@ -1,15 +1,13 @@
 @import "@styles/index.scss";
-.ProfileBody {
-  height: 80vh;
+
+.ProfilePage {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  max-width: 800px;
-  margin: 0 auto;
-  gap: 25px;
 }
-
+.ProfileBody {
+  width: fit-content;
+}
 .ExitButton {
   border-radius: 0;
   width: 100%;
