--- a/src/shared/ui/Loader/ui/Loader.module.scss
+++ b/src/shared/ui/Loader/ui/Loader.module.scss
@@ -1,6 +1,6 @@
 .LoaderComponent {
   height: 80vh;
-  width: 95vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
