--- a/src/pages/MainPage/ui/MainPage.module.scss
+++ b/src/pages/MainPage/ui/MainPage.module.scss
@@ -5,6 +5,6 @@
 .flexBody {
   padding: 1rem 0;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: space-between;
 }
