--- a/src/features/TrainParams/ui/TrainParams.module.scss
+++ b/src/features/TrainParams/ui/TrainParams.module.scss
@@ -84,3 +84,15 @@
   gap: 100px;
   margin: 35px 0;
 }
+.button {
+  border: 1px solid grey;
+  background-color: transparent;
+  padding: 3px 10px;
+  font-size: 10px;
+  margin-left: 5px;
+  transition: 0.2s ease;
+  &Active {
+    background-color: purple;
+    color: #fff;
+  }
+}
